Fixed issue with nav bar on mobile version

--- a/src/styles.css
+++ b/src/styles.css
@@ -212,7 +212,9 @@ footer {
 
 @media (max-width: 700px) {
   .nav-toggle {
-    display: flex;
+    display: flex !important;
+    position: relative;
+    z-index: 101;
   }
   .nav-links {
     display: none;
